<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_faca_cadastro"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/formulario_bar_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_nome"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/formulario_bar_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/formulario_endereco"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/formulario_bar_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/formulario_telefone"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/formulario_musico_estilo"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="15dp"/>

            <Spinner
                android:id="@+id/formulario_bar_spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/formulario_bar_descricao"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/formulario_descricao_bar"
            android:textSize="15dp"/>
    </LinearLayout>
</ScrollView>